--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,9 @@
           "backdrop-filter"
         ]
       }
-    ]
+    ],
+    "detect-css-reflows/composite": "off",
+    "detect-css-reflows/paint": "off",
+    "detect-css-reflows/layout": "off"
   }
 }
